@@ -1,0 +1,17 @@
+SECTIONS
+{
+  . = 0x2000 ;
+
+  _start = .;
+
+  HEAP_SIZE = 0x100;
+
+  .heap : {
+    . = HEAP_SIZE;
+    . = ALIGN(4);
+  }
+
+  _end = .;
+
+  /DISCARD/ : { *(*) }
+}
